[package]
name = "cargo-launch"
version = "0.1.2"
edition = "2024"
authors = ["Jonathan Kelley", "xoviat"]
license = "MIT"
description = "Launch your cargo build with the vscode debugger, probe-rs, gdb, or other debuggers attached."
repository = "https://github.com/xoviat/cargo-launch"

[[bin]]
name = "cargo-debug"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
cargo_metadata = "0.23.1"
# krates = "0.17.5"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
url-escape = "0.1.1"
# tracing = "0.1.41"
urlencoding = "2.1.3"
